--- a/templates/data/index.html
+++ b/templates/data/index.html
@@ -46,7 +46,7 @@
                         </thead>
                         <tbody>
                             {% for project in projects %}
-                                {% if not project.hidden %}
+                                {% if not (project.hidden and not current_user.admin) and not (project.category == 'Staff' and not current_user.admin) %}
                                   <tr>
                                       <td><a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">{{project.name}}</a></td>
                                       <td class="text-center"><a href="{{url_for('project.export_to', short_name=project.short_name, type='task', format='json')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
@@ -73,8 +73,8 @@
                         </thead>
                         <tbody>
                             {% for project in projects %}
-                              {% if not project.hidden %}
-                                <tr>
+                              {% if not (project.hidden and not current_user.admin) and not (project.category == 'Staff' and not current_user.admin) %}
+                                 <tr>
                                     <td><a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">{{project.name}}</a></td>
                                     <td class="text-center"><a href="{{url_for('project.export_to', short_name=project.short_name, type='task_run', format='json')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
                                     <td class="text-center"><a href="{{url_for('project.export_to', short_name=project.short_name, type='task_run', format='csv')}}" rel="nofollow"><i class="fa fa-download"></i></a></td>
@@ -100,7 +100,7 @@
                         </thead>
                         <tbody>
                             {% for project in projects %}
-                              {% if not project.hidden %}
+                              {% if not (project.hidden and not current_user.admin) and not (project.category == 'Staff' and not current_user.admin) %}
                                 <tr>
                                     <td><a href="{{ url_for('blplugin.details', short_name = project.short_name) }}">{{project.name}}</a></td>
                                     <td class="text-center">{% if project.info.flickr_link %}<a href="{{project.info.flickr_link}}" target="_blank">{% endif %}<i class="fa fa-link"></i>{% if project.info.flickr_link %}</a>{% endif %}</td>
