--- a/templates/projects/presenters/cards.html
+++ b/templates/projects/presenters/cards.html
@@ -1,6 +1,6 @@
-<a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='cards')}}">
+<a href="{{url_for('project.task_presenter_editor', short_name=project.short_name, template='convert-a-card')}}">
   <div class="well">
-    <h2><i class="glyphicon glyphicon-picture"></i> Cards</h2> 
-    <h3>Re-use the card catalogue template</h3>
+    <h2><i class="glyphicon glyphicon-picture"></i> Convert-a-Card</h2>
+    <h3>The OCLC WorldCat search template</h3>
   </div>
 </a>
