Update password protection form

--- a/templates/projects/password.html
+++ b/templates/projects/password.html
@@ -15,9 +15,9 @@
         {{ form.hidden_tag() }}
         <fieldset>
             {{ form.password(class="form-control", placeholder=_('Project password')) | safe}}
-            <div class="form-actions">
-                <a href="{{ url_for('home.home') }}" class="btn">{{ _('Cancel') }}</a>
-                <button type="submit" name='btn' value="New" class="btn btn-danger">{{ _('Submit') }}</button>
+            <div class="pull-right form-actions" role="group">
+                <a href="{{ url_for('home.home') }}" class="btn btn-default">{{ _('Cancel') }}</a>
+                <button type="submit" value="Submit" class="btn btn-danger">{{ _('Submit') }}</button>
             </div>
         </fieldset>
     </form>
