--- a/templates/projects/password.html
+++ b/templates/projects/password.html
@@ -6,23 +6,21 @@
 {% from "_formhelpers.html" import render_field %}
     <div class="container-padded">
         <div class="container container-padded">
-<div id="project-form" class="row"> 
-    <div class="col-sm-6 col-sm-offset-3">
-        {% include "_flash_messages.html" %}
-        {{ helper.render_project_title(project) }}
-        <h2>{{ _('Enter the password to contribute to this project:') }}</h2>
-    <form class="form-horizontal" method="post" action="{{ url_for('project.password_required', short_name=short_name, next=next) }}">
-        {{ form.hidden_tag() }}
-        <fieldset>
-            {{ form.password(class="form-control", placeholder=_('Project password')) | safe}}
-            <div class="pull-right form-actions" role="group">
-                <a href="{{ url_for('home.home') }}" class="btn btn-default">{{ _('Cancel') }}</a>
-                <button type="submit" value="Submit" class="btn btn-danger">{{ _('Submit') }}</button>
+            <div id="project-form" class="row"> 
+                <div class="col-sm-6 col-sm-offset-3">
+                    {% include "_flash_messages.html" %}
+                    {{ helper.render_project_title(project) }}
+                    <h2>{{ _('Enter the password to contribute to this project:') }}</h2>
+                    <form class="form-horizontal" method="post" action="{{ url_for('project.password_required', short_name=short_name, next=next) }}">
+                        {{ form.hidden_tag() }}
+                        {{ render_field(form.password, placeholder=_('Project password')),class="form-control", required="required", type="password"| safe}}
+                        <div class="pull-right form-actions" role="group">
+                            <a href="{{ url_for('home.home') }}" class="btn btn-default">{{ _('Cancel') }}</a>
+                            <button type="submit" value="Submit" class="btn btn-danger">{{ _('Submit') }}</button>
+                        </div>
+                    </form>
+                </div>
             </div>
-        </fieldset>
-    </form>
+        </div>
     </div>
-</div>
-</div>
-</div>
 {% endblock %}
