--- a/templates/projects/password.html
+++ b/templates/projects/password.html
@@ -13,7 +13,7 @@
                     <h2>{{ _('Enter the password to contribute to this project:') }}</h2>
                     <form class="form-horizontal" method="post" action="{{ url_for('project.password_required', short_name=short_name, next=next) }}">
                         {{ form.hidden_tag() }}
-                        {{ render_field(form.password, placeholder=_('Project password')),class="form-control", required="required", type="password"| safe}}
+                        {{ render_field(form.password, placeholder="Project password" ,class="form-control", required="required", type="password"| safe}}
                         <div class="pull-right form-actions" role="group">
                             <a href="{{ url_for('home.home') }}" class="btn btn-default">{{ _('Cancel') }}</a>
                             <button type="submit" value="Submit" class="btn btn-danger">{{ _('Submit') }}</button>
