--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,7 @@
             var originalTitle = document.title;
             var originalNavContent =  $('#discourse-nav').html();
             $(function() {
-                $.ajax({ url: "/api/discourse/notifications/{{current_user.name}}/count",
+                $.ajax({ url: "/api/discourse/user/{{current_user.name}}/notifications/count",
                     success: function(data) {
                         updateNotificationsPill(data);
                     }
@@ -114,7 +114,7 @@
             });
             (function poll() {
                 setTimeout(function() {
-                    $.ajax({ url: "/api/discourse/notifications/{{current_user.name}}/count",
+                    $.ajax({ url: "/api/discourse/user/{{current_user.name}}/notifications/count",
                         success: function(data) {
                             updateNotificationsPill(data);
                         }, dataType: "json", complete: poll });
