--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -257,6 +257,9 @@ h1 i,h2 i,h3 i{padding-right:10px}
 .blogpost img{margin-top:50px;margin-left:auto;margin-right:auto;display:block;}
 .blogpost img + em{margin-bottom:50px;margin-left:auto;margin-right:auto;display:block;text-align:center}
 #btn-group-cookies{position:relative;display:flex;display:-moz-flex;display:-ms-flex;display:-o-flex;display:-webkit-flex;vertical-align:middle;justify-content:center;-webkit-justify-content: center;-ms-flex-pack:center}
+.ui-menu-item{padding: 8px 15px;height: 40px;}
+.ui-menu-item.ui-state-focus{background-color:#EDEDED}
+.ui-autocomplete{border-top-color: #d9d9d9;box-shadow: 0 2px 4px rgba(0,0,0,0.2);-webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.2);cursor: default;font-size: 14px;line-height: 1.42857143;color: #555;background-color: #fff;background-image: none;border: 1px solid #ccc;border-bottom-right-radius: 4px;border-bottom-left-radius: 4px;}
 .input-group-btn .form-control.search-button{border-top-right-radius:10px;border-bottom-right-radius:10px;padding-bottom:10px}
 .btn-default,.btn-primary,.btn-secondary,.btn-success,.btn-info,.btn-warning,.btn-danger{text-shadow:initial;background-color:#fff;border-radius:3px;text-transform:uppercase;font-size:15px;font-weight:600;transition:background-color .3s,color .5s;-webkit-transition:background-color .3s,color .5s;-moz-transition:background-color .3s,color .5s;-ms-transition:background-color .3s,color .5s;-o-transition:background-color .3s,color .5s}
 .btn:active,.btn.active{background-image:none}
