--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -82,22 +82,27 @@
         <!-- Social media-->
         <a data-content="Share on Facebook" class="btn btn-facebook btn-popover"
            onclick="popUp=window.open('http://www.facebook.com/sharer.php?u=http%3A%2F%2Fwww.libcrowds.com',
-                                   'popupwindow', 'scrollbars=yes,width=510,height=620');popUp.focus();return false">
+                                   'popupwindow', 'scrollbars=yes,width=510,height=620');popUp.focus();return false"
+                                   data-url="http://www.libcrowds.com">
             <i class="fa fa-facebook"></i>
         </a>
         
         <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Fwww.libcrowds.com
-        &text=Participate%20in%20crowdsourcing%20projects%20and%20help%20improve%20access%20to%20the%20collections%20of%20the%20British%20Library.&tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com" data-content="Share on Twitter" class="btn btn-twitter btn-popover">
+        &text=Participate%20in%20crowdsourcing%20projects%20and%20help%20improve%20access%20to%20the%20collections%20of%20the%20British%20Library.&tw_p=tweetbutton&url=http%3A%2F%2Fwww.libcrowds.com"
+           data-content="Share on Twitter" class="btn btn-twitter btn-popover"
+           data-url="http://www.libcrowds.com">
             <i class="fa fa-twitter"></i>
         </a>
         <a href="#" data-content="Share on Google+" class="btn btn-googleplus btn-popover"
         onclick="popUp=window.open('https://plus.google.com/share?url=http%3A%2F%2Fwww.libcrowds.com',
-                                   'popupwindow', 'scrollbars=yes,width=510,height=725');popUp.focus();return false">
+                                   'popupwindow', 'scrollbars=yes,width=510,height=725');popUp.focus();return false"
+                                   data-url="http://www.libcrowds.com">
             <i class="fa fa-google"></i>
         </a>
         <a href="#" data-content="Share on LinkedIn" class="btn btn-linkedin btn-popover"
         onclick="popUp=window.open('https://www.linkedin.com/cws/share?url=http%3A%2F%2Fwww.libcrowds.com',
-                                   'popupwindow', 'scrollbars=yes,width=510,height=520');popUp.focus();return false">
+                                   'popupwindow', 'scrollbars=yes,width=510,height=520');popUp.focus();return false"
+                                   data-url="http://www.libcrowds.com">
             <i class="fa fa-linkedin"></i>
         </a>
         <div class="row">
