--- a/templates/blog/new_blogpost.html
+++ b/templates/blog/new_blogpost.html
@@ -18,6 +18,7 @@
                     {{ render_field(form.title, class="form-control", required="required", placeholder= _('The title of your post')) }}
                     {{ render_field(form.body, class="form-control", required="required", rows="15",
                     placeholder= _('Write your post here. You can use Markdown!')) }}
+                    <div id="epiceditor" class="form-control" data-textarea="body"></div>
                     <div role="group" class="pull-right">
                         <a href="{{url_for('blog.index')}}" class="btn btn-default">{{_('Cancel')}}</a>
                         <input type="submit" value={{_('Create')}} class="btn btn-danger" />
