--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -13,12 +13,12 @@
 <script src="/static/vendor/jquery.serializejson.min.js" type="text/javascript"></script>
     <div class="container-padded">
         <div class="container container-padded remove-padding-bottom">
-        {% include "_flash_messages.html" %}
         {% if invite_new_volunteers %}
             <div class="row">
-                <div class="col-xs-12">
+                <div class="col-xs-12 text-center padding-top">
                     <h1>Great, you've contributed to all the tasks for this project.</h1>
                     <h2>But this project still needs more volunteers, so please spread the word!</h2>
+                    <a href="/"><i class="fa fa-home fa-3x"></i></a>
                 </div>
             </div>
         {% else %}
@@ -27,9 +27,10 @@
                 {{ project.info.task_presenter|safe }}
             {% else %}
                 <div class="row">
-                    <div class="col-xs-12">
-                        <h1>Sorry, this project is currently hiding</h1>
+                    <div class="col-xs-12 text-center padding-top">
+                        <h1>Sorry, this project is currently hiding.</h1>
                         <h2>It will be revealed shortly, see you then!</h2>
+                        <a href="/"><i class="fa fa-home fa-3x"></i></a>
                     </div>
                 </div>
             {% endif %}
