--- a/templates/blog/new_blogpost.html
+++ b/templates/blog/new_blogpost.html
@@ -29,5 +29,6 @@
         </div>
         </div>
     </div>
+<script src="{{url_for('static', filename='vendor/EpicEditor-v0.2.2/js/epiceditor.min.js')}}" type="text/javascript"></script>
 {{ helper.broken_image() }}
 {% endblock %}
