--- a/templates/blog/update_blogpost.html
+++ b/templates/blog/update_blogpost.html
@@ -31,4 +31,5 @@
             </div>
         </div>
     </div>
+<script src="{{url_for('static', filename='vendor/EpicEditor-v0.2.2/js/epiceditor.min.js')}}" type="text/javascript"></script>
 {% endblock %}
