--- a/templates/projects/update_project.html
+++ b/templates/projects/update_project.html
@@ -128,6 +128,7 @@ You can use Markdown to format your description.'), class="form-control hidden",
         $('.control-label').addClass('remove-padding-left');
     });
 </script>
+<script src="{{url_for('static', filename='vendor/EpicEditor-v0.2.2/js/epiceditor.min.js')}}" type="text/javascript"></script>
 <script src="{{url_for('static', filename='js/image_crop.js')}}" type="text/javascript"></script>
 {{ helper.broken_image() }}
 {% endblock %}
