--- a/templates/base.html
+++ b/templates/base.html
@@ -129,6 +129,9 @@
                 }
             }
         </script>
+        <script>
+          {% include 'cookies.js' %}
+        </script>
     {% endif %}
   </body>
 </html>
