--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -13,6 +13,7 @@
 <script src="/static/vendor/jquery.serializejson.min.js" type="text/javascript"></script>
     <div class="container-padded">
         <div class="container container-padded remove-padding-bottom">
+        {% include "_flash_messages.html" %}
         {% if invite_new_volunteers %}
             <div class="row">
                 <div class="col-xs-12 text-center padding-top">
@@ -21,7 +22,7 @@
                     <a href="/"><i class="fa fa-home fa-3x"></i></a>
                 </div>
             </div>
-        {% else %}
+        {% else %}f
             
             {% if project.hidden == 0 %}
                 {{ project.info.task_presenter|safe }}
