Add completed message to convert-a-card template

--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -22,7 +22,7 @@
                     <a href="/"><i class="fa fa-home fa-3x"></i></a>
                 </div>
             </div>
-        {% else %}f
+        {% else %}
             
             {% if project.hidden == 0 %}
                 {{ project.info.task_presenter|safe }}
