Small wording change

--- a/templates/blog/_helpers.html
+++ b/templates/blog/_helpers.html
@@ -89,7 +89,7 @@
                 <p class="blog-menu-title inset-text-grey">Newsletter</p>
                 <div class="blog-menu-body">
                     <p>Sign up here to receive the latest LibCrowds news direct to your inbox.</p>
-                    <p><small>We will use you email address responsibly, promise.</small></p>
+                    <p><small>Your email address will be used responsibly, promise.</small></p>
                     <div class="text-center padding-top-xs padding-bottom-xs"> 
                     <a id="signmeup" class="btn btn-danger"
 			    href="{{url_for('account.newsletter_subscribe', subscribe=True,
