--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-placeholder-focus="false">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     {% if brand == title %}
@@ -39,7 +39,7 @@
 
     {% if preload_js == "true" %}
       {% assets "js_top" %}
-      <script type="text/javascript" src="{{ ASSET_URL }}?v=2.0.0"></script>
+      <script type="text/javascript" src="{{ ASSET_URL }}?v=2.0.3"></script>
       {% endassets %}
     {% endif %}
     
@@ -86,12 +86,12 @@
       
       {% if not preload_js == "true" %}
         {% assets "js_top" %}
-        <script type="text/javascript" src="{{ ASSET_URL }}?v=2.0.2"></script>
+        <script type="text/javascript" src="{{ ASSET_URL }}?v=2.0.3"></script>
         {% endassets %}
       {% endif %}
       
       {% assets "js_bottom" %}
-        <script type="text/javascript" src="{{ ASSET_URL }}?v=2.0.2"></script>
+        <script type="text/javascript" src="{{ ASSET_URL }}?v=2.0.3"></script>
       {% endassets %}
       
       {% if current_user.is_authenticated() %}
