--- a/templates/base.html
+++ b/templates/base.html
@@ -26,12 +26,14 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
       <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-      <style>.ie-vcenter{position:relative;top:50%;transform:translateY(-50%);}</style>
+      <style>.ie-vcenter{position:relative;top:50%;transform:translateY(-50%);}
+      .ie-mid-vcenter{position:relative;top:25%;transform:translateY(-25%);}</style>
     <![endif]-->
     <!--[if IE 9]>
       <style>
       .ie-vcenter{position:relative;top:50%;transform:translateY(-50%);}
       #image_container{margin-top:0px!important;}
+      .ie-mid-vcenter{position:relative;top:25%;transform:translateY(-25%);}
       </style>
     <![endif]-->
 
