--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -4,14 +4,14 @@
 {% block content %}
 {% include "_flash_messages_floating.html" %}
 <div class="splash" id="home-splash">
-  <div class="splash-overlay vcenter ie-vcenter hcenter">
-    <div class="container">
+  <div class="splash-overlay vcenter hcenter">
+    <div class="container ie-vcenter">
       <h1>Crowdsourcing projects<br />from the British Library</h1>
         <div class="col-xs-12">
             <div data-anchor="#intro" class="btn btn-circle anchor-btn">
               <a>
-                   <div><i class="fa fa-angle-double-down fa-3x padding-top-xs"></i></div>
-                   <div><br>Get<br>Started</div>
+                <div><i class="fa fa-angle-double-down fa-3x padding-top-xs"></i></div>
+                <div><br>Get<br>Started</div>
               </a>
             </div>
         </div>
