--- a/templates/projects/blproject.html
+++ b/templates/projects/blproject.html
@@ -15,7 +15,7 @@
             {% include "_flash_messages_floating.html" %}
             <div class="splash" id="project-splash" data-splash="{{ url_for('uploads.uploaded_file', filename=(project.info.container + '/' + project.info.splash))}}">
                 <div class="vcenter hcenter position-relative" style="height:100%;">
-                    <div class="container text-center ie-vcenter padding-top">
+                    <div class="container text-center ie-mid-vcenter padding-top">
                         <div class="container-padded">
                             <h1>{{ helper.render_project_title(project, upload_method) }}</h1>
                             <h2>{{ overall_progress | round | int }}% {{_('complete')}}</h2>
